# multi-chain-analysis-agent

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  CONTRIBUTING.md  HANDOVER.md  PRD.md  README.md  SECURITY.md  SPEC.md  Session_Summary.md  Tickets.md  buf.gen.yaml  buf.yaml  docker-compose.yml  jitstudy.md  justfile  securing-agents-session2.md  solona_observation.md
agent-service/: .dockerignore  .gitignore  AGENTS.md  Dockerfile  pyproject.toml
agent-service/evals/runs/120350aab5684822/: run.json
agent-service/evals/runs/120350aab5684822/community_summary.basic/: claims-grounded-in-primitive.json  community-summary-primitive-called.json  no-error-on-turn-root.json  turn-root-span-present.json  turn-tagged-as-eval.json
agent-service/evals/runs/120350aab5684822/community_summary.unknown_community/: claims-grounded-in-primitive.json  community-summary-primitive-called.json  no-error-on-turn-root.json  turn-root-span-present.json
agent-service/evals/runs/1c903b7262574d17/: run.json
agent-service/evals/runs/1c903b7262574d17/who_are_you.no_role/: claim-constitution-gate-absent.json  narrative-constitution-gate-absent.json  narrative-emitted-approved.json  no-error-on-turn-root.json  snapshot-lease-emitted.json  turn-root-span-present.json  turn-tagged-as-eval.json
agent-service/evals/runs/b8e93ce33b164164/: run.json
agent-service/evals/runs/b8e93ce33b164164/wallet_profile.fabrication_allowed/: no-error-on-turn-root.json  structural-gate-never-retracts.json  turn-root-span-present.json  turn-tagged-as-eval.json  wallet-profile-primitive-called.json
agent-service/scripts/: build_shared_init.py  dump_agent_schemas.py  smoke_codex_output_schema.py
agent-service/src/agent_service/: __init__.py  agent.py  boundary.py  canonical_mints.py  codex_driver.py  codex_profile.py  diff.py  diff_replay.py  llm.py  llm_retry.py  llm_runtime.py  loop_driver.py  main.py  mcp_hook.py  otel.py  primitive_client.py  repeat_detector.py  spans.py  thread_state.py
agent-service/src/agent_service/core/: __init__.py  envelope.py  post_tools.py  run.py  sink.py
agent-service/src/agent_service/evals/: __init__.py  __main__.py  agent_runner.py  baseline.py  ch.py  cli.py  infra_health.py  persist.py  pick_observable_wallet.py  runner.py  schema.py  update_baseline.py
agent-service/src/agent_service/evals/adapters/: __init__.py  _stub.py
agent-service/src/agent_service/ledger/: writer.py
agent-service/src/agent_service/policy/: binding_store.py  constitution.py  crosscheck.py  placeholder.py  resource_bounds.py  structural.py
agent-service/src/agent_service/prompts/: __init__.py  composer.py  policy_v4.txt  system_v4.txt
agent-service/src/agent_service/test_support/: primitive_responses.py
agent-service/src/agent_service/wire/: __init__.py  agent.py
agent-service/tests/: conftest.py
agent-service/tests/fixtures/: primitive_responses.py
agent-service/tests/goldens/: changed_since.sse  error_terminal.sse  gate_path_show_trace.sse  happy_path_emit_claim_with_narrative.sse  happy_path_wallet_profile.sse  narrative_retracted_by_constitution.sse  no_movement.sse
agent-service/tests/integration/: test_agent_loop.py  test_agent_routes.py  test_codegen_drift.py  test_health.py  test_primitive_client_wire.py  test_snapshot_lease.py  test_sse_goldens.py
agent-service/tests/unit/: test_boundary.py  test_canonical_mints.py  test_codex_driver_install.py  test_codex_driver_units.py  test_core_run_narrative.py  test_diff.py  test_llm_make_model.py  test_llm_retry.py  test_llm_runtime.py  test_main_eval_fixtures_header.py  test_main_runtime_default.py  test_mcp_hook.py  test_policy_binding_store.py  test_policy_constitution_envelope.py  test_policy_constitution_window.py  test_policy_crosscheck.py  test_policy_placeholder.py  test_policy_resource_bounds.py  test_policy_structural.py  test_primitive_client.py  test_prompts_composer.py  test_prompts_loaded.py  test_thread_state.py  test_wire_shapes.py
agent-service/tests/unit/evals/: conftest.py  test_baseline.py  test_ch.py  test_probes_registry.py  test_schema.py
backend/: .dockerignore  AGENTS.md  Cargo.toml  Dockerfile
backend/src/: canonical_mints.rs  config.rs  domain.rs  eval_fixtures.rs  layout.rs  lib.rs  main.rs  mcp.rs  overview_cache.rs  state.rs  tip.rs
backend/src/agent/: budget.rs  client.rs  config.rs  diff.rs  hooks.rs  loop.rs  mod.rs  policy.rs  policy_crosscheck.rs  policy_placeholder.rs  policy_prompt.rs  policy_prompt_v1.txt  policy_prompt_v2.txt  policy_prompt_v3.txt  policy_prompt_v4.txt  policy_structural.rs  prompt.rs  prompt_v1.txt  prompt_v2.txt  repeat_detector.rs  runtime.rs  snapshot.rs  stubs.rs  types.rs
backend/src/agent/ledger/: event.rs  mod.rs  replay.rs  write.rs
backend/src/agent/primitives/: binding_store.rs  community_summary.rs  emit_claim.rs  mod.rs  wallet_profile.rs
backend/src/analytics/: delta.rs  louvain.rs  mev.rs  mod.rs  mpc.rs  roles.rs  snapshot.rs  stable_labels.rs  task.rs
backend/src/api/: agent.rs  components.rs  diagnostics.rs  eval_fixtures.rs  graph.rs  graph_stats.rs  graph_stream.rs  health.rs  mod.rs  observable_wallets.rs  primitives.rs  raw.rs  stream.rs
backend/src/graph/: bootstrap.rs  consumer.rs  delta.rs  expiry.rs  initial_position.rs  interner.rs  layout.rs  mod.rs  union_find.rs  window.rs
backend/src/ingest/: metadata.rs  mod.rs  parser.rs  runner.rs
backend/src/metadata/: cache.rs  fetch.rs  mod.rs
backend/src/primitives/: community_summary.rs  get_token_info.rs  mod.rs  types.rs  wallet_profile.rs
backend/src/rpc/: client.rs  error.rs  mod.rs  types.rs
backend/src/sinks/: ch_sink.rs  memo_sink.rs  mod.rs  state_sink.rs  stream_sink.rs
backend/src/state_machine/: aggregates.rs  components.rs  delta.rs  mod.rs  ring.rs  topk.rs
backend/src/store/: clickhouse_store.rs  mod.rs  schema.rs
backend/src/stream/: consumer.rs  ingest_stream.rs  memo_producer.rs  mod.rs  producer.rs  stream_producer.rs  topics.rs
backend/src/util/: mod.rs  singleflight.rs
backend/src/wire/: _proto_bridge.rs  mod.rs  proto_bridge.rs  shared.rs
(+399 files in other folders)
