[project]
name = "agent-service"
version = "0.1.0"
description = "Python agent plane for multi-chain-analysis-engine. Pydantic AI orchestration, calls Rust data plane on :8002 for primitives."
requires-python = ">=3.12"
dependencies = [
    # Pydantic AI native OpenRouter provider lives in this slim install.
    # Per the migration plan we use OpenRouter free-tier for both
    # primary (nemotron) and policy (gpt-oss) models.
    "pydantic-ai-slim[openai]>=1.0",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sse-starlette>=2.1",
    "httpx>=0.27",
    "structlog>=24.4",
    "protobuf>=7.34.1",
    # Ship 1 of agent-observability (ADR 13). Pydantic AI emits OTel
    # GenAI semconv spans for free; we add domain spans on top. The
    # SDK + OTLP HTTP exporter are the bare minimum to ship traces to
    # the otel-collector sidecar; FastAPI auto-instrumentation gives
    # us request spans as the trace root for browser-initiated turns.
    "opentelemetry-sdk>=1.29",
    "opentelemetry-exporter-otlp-proto-http>=1.29",
    "opentelemetry-instrumentation-fastapi>=0.50b0",
    # Ship 2 of agent-observability (ADR 14). YAML loader for eval
    # case suites (`evals/cases/*.yaml`) and test fixtures. ruamel.yaml
    # passes the AGENTS.md library bar at v0.19.1 (released 2026-01-02,
    # actively maintained by Anthon van der Neut for 10+ years, full
    # YAML 1.2 spec). PyYAML's 6.0.3 release (2025-09-25, ~7.5 months
    # old) borderline-fails the freshness check; ruamel.yaml is the
    # idiomatic-current replacement.
    "ruamel.yaml>=0.18,<0.20",
]

[dependency-groups]
dev = [
    # Wiring-only pytest layer. No LLM calls. The total baseline-test
    # runtime budget is <5s, which is also our smoke check that no
    # real OpenRouter call has snuck in.
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "pytest-httpx>=0.30",
    "dirty-equals>=0.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# `multichain` is the auto-generated proto package (sibling of
# `agent_service` so the generated absolute imports resolve cleanly).
# Both ship in the wheel.
packages = ["src/agent_service", "src/multichain"]

[tool.uv]
package = true

# Force protobuf 7.x through the dependency graph. opentelemetry-proto
# 1.41.x (latest as of Ship 1 of agent-observability, ADR 13) still
# pins `protobuf<7.0,>=5.0`, but our wire types are generated by
# protoc 7.34.1 and embed a runtime-version check that requires the
# matching runtime. The `google.protobuf` Python API has been stable
# across the 5.x → 6.x → 7.x major bumps (the breaking changes were
# in the C++ runtime, not the Python surface), so opentelemetry-proto's
# generated code runs cleanly on protobuf 7.x in practice.
#
# Drop this override once opentelemetry-proto bumps its protobuf
# upper bound. Track via:
#   curl -s https://pypi.org/pypi/opentelemetry-proto/json | \
#     jq -r .info.requires_dist
override-dependencies = ["protobuf>=7.34.1"]

[tool.pytest.ini_options]
# `auto` means async test functions and fixtures don't need
# `@pytest.mark.asyncio`. Keeps the test surface clean.
asyncio_mode = "auto"
testpaths = ["tests"]
# Surface DeprecationWarning so codegen / pydantic / pydantic-ai
# version drift bubbles up as a test signal, not silent rot.
filterwarnings = [
    "error::DeprecationWarning:agent_service.*",
]
