[package]
name = "multichain-engine"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "server"
path = "src/main.rs"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clickhouse = { version = "0.13", features = ["rustls-tls"] }
anyhow = "1"
thiserror = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
governor = "0.7"
bs58 = "0.5"
# `EdgeStore` trait in store/mod.rs needs async fn in trait via async-trait
# (still the most ergonomic option pre-stable async-fn-in-trait).
async-trait = "0.1"
futures-util = "0.3"
rdkafka = { version = "0.36", features = ["cmake-build", "tokio", "ssl-vendored"] }
tokio-stream = { version = "0.1", features = ["sync"] }
parking_lot = "0.12"
# Snapshot lease cache: per-turn `WindowSnapshot` keyed by snapshot_id,
# GC sweep drops entries older than 5 minutes. DashMap gives sharded
# read concurrency for the primitive endpoints without locking the
# whole map per call.
dashmap = "6"
ts-rs = { version = "10", features = ["serde-compat"] }
rustc-hash = "2"
rayon = "1"
# Snapshot id: sortable ulid keeps the lease cache index stable and
# greppable in logs without leaking creation timestamps.
ulid = { version = "1", features = ["serde"] }
# Proto wire types (Anthropic's pure-Rust protobuf with editions, JSON,
# zero-copy views). Generated code lives in `src/wire/generated/`; the
# `json` feature enables serde derives for the proto-canonical-JSON
# debug fallback alongside binary protobuf.
buffa = { version = "0.4.0", features = ["json"] }
buffa-types = { version = "0.4.0", features = ["json"] }
