[package]
name = "multichain-engine"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "server"
path = "src/main.rs"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clickhouse = { version = "0.13", features = ["rustls-tls"] }
anyhow = "1"
thiserror = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
governor = "0.7"
bs58 = "0.5"
# Borsh deserializer for on-chain instruction data we receive in
# `getBlock` and currently discard. Used by `ingest::metadata` to
# decode Metaplex Token Metadata Program instruction args (DataV2:
# name/symbol/uri) without pulling the full mpl-token-metadata client
# SDK and its solana_program transitive weight. Schema is stable
# since 2021; we re-derive only the slice of types we read.
borsh = { version = "1", features = ["derive"] }
# Standard base64 codec; used by `metadata::fetch` to decode the
# base64-encoded `data` field returned by `getAccountInfo` for accounts
# whose owner program is outside the RPC's `jsonParsed` allowlist
# (e.g. the Metaplex Token Metadata Program).
base64 = "0.22"
# Solana account-address type and PDA derivation. Re-export of the
# `solana-address` crate; gives us `Pubkey` and
# `Pubkey::find_program_address` for deriving the Metaplex metadata
# PDA from a mint pubkey. The `curve25519` feature is required for
# `find_program_address` (which iterates bumps until finding one whose
# hash is NOT on the ed25519 curve, ensuring no corresponding private
# key exists). `sha2` is the hashing dep used inside the same path.
# Anza-maintained, real-human PRs, passes the AGENTS.md library bar
# (4.2.0 from 2026-04-07, 7.8M downloads, 234 stars on
# anza-xyz/solana-sdk).
solana-pubkey = { version = "4", features = ["curve25519", "sha2"] }
# `EdgeStore` trait in store/mod.rs needs async fn in trait via async-trait
# (still the most ergonomic option pre-stable async-fn-in-trait).
async-trait = "0.1"
futures-util = "0.3"
rdkafka = { version = "0.36", features = ["cmake-build", "tokio", "ssl-vendored"] }
tokio-stream = { version = "0.1", features = ["sync"] }
parking_lot = "0.12"
# Snapshot lease cache: per-turn `WindowSnapshot` keyed by snapshot_id,
# GC sweep drops entries older than 5 minutes. DashMap gives sharded
# read concurrency for the primitive endpoints without locking the
# whole map per call.
dashmap = "6"
ts-rs = { version = "10", features = ["serde-compat"] }
rustc-hash = "2"
rayon = "1"
# Snapshot id: sortable ulid keeps the lease cache index stable and
# greppable in logs without leaking creation timestamps.
ulid = { version = "1", features = ["serde"] }
# Proto wire types (Anthropic's pure-Rust protobuf with editions, JSON,
# zero-copy views). Generated code lives in `src/wire/generated/`; the
# `json` feature enables serde derives for the proto-canonical-JSON
# debug fallback alongside binary protobuf.
buffa = { version = "0.4.0", features = ["json"] }
buffa-types = { version = "0.4.0", features = ["json"] }
# Official Rust MCP SDK from `modelcontextprotocol/rust-sdk`. We mount
# `StreamableHttpService` as an Axum nested service at `/mcp` on the
# internal listener so codex CLI (or any MCP client) can call our
# read-only primitives in-process without going through the existing
# `/primitive/*` HTTP routes. v1.6 released 2026-05-01; passes the
# AGENTS.md library bar (3.4k stars, healthy human PR cadence).
rmcp = { version = "1.6", features = ["server", "transport-streamable-http-server", "macros"] }
